--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -219,7 +219,7 @@
     <string name="btn_mode_list_toggle" msgid="3986242443098400164">"मोड सूची"</string>
     <string name="accessibility_filmstrip_toggle" msgid="6966978483643396442">"फिल्मस्ट्रीप टॉगल करा"</string>
     <string name="btn_filmstrip_toggle" msgid="3666693972882351490">"फिल्मस्ट्रीप"</string>
-    <string name="accessibility_mode_zoom_plus" msgid="4967389173992713073">"झूम वाढवा"</string>
+    <string name="accessibility_mode_zoom_plus" msgid="4967389173992713073">"झूम इन करा"</string>
     <string name="btn_zoom_plus" msgid="4645138949375961656">"Z+"</string>
     <string name="accessibility_mode_zoom_minus" msgid="8850636036927992409">"झूम कमी करा"</string>
     <string name="btn_zoom_minus" msgid="5436240345362098272">"Z-"</string>
