Import translations. DO NOT MERGE
Change-Id: Icab80134544204e8ea0e0425cd87314d038fa466
Auto-generated-cl: translation import

--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -22,9 +22,9 @@
     <string name="details_hms" msgid="4842276230698703554">"%1$d:%2$02d:%3$02d"</string>
     <string name="set_image" msgid="3969690281401045698">"चित्र या रूपात सेट करा"</string>
     <string name="delete" msgid="2714492172818940424">"हटवा"</string>
-    <string name="share" msgid="8581089487762243115">"सामायिक करा"</string>
-    <string name="share_panorama" msgid="3558466186935359444">"पॅनोरामा सामायिक करा"</string>
-    <string name="share_as_photo" msgid="4831213580709167218">"फोटो म्हणून सामायिक करा"</string>
+    <string name="share" msgid="8581089487762243115">"शेअर करा"</string>
+    <string name="share_panorama" msgid="3558466186935359444">"पॅनोरामा शेअर करा"</string>
+    <string name="share_as_photo" msgid="4831213580709167218">"फोटो म्हणून शेअर करा"</string>
     <string name="deleted" msgid="2036165115527228127">"हटविला"</string>
     <string name="undo" msgid="5110048345890050107">"पूर्ववत करा"</string>
     <string name="details" msgid="4404020741542549488">"तपशील"</string>
@@ -329,7 +329,7 @@
     <string name="done_button_description" msgid="1334963435441544592">"पूर्ण झाले"</string>
     <string name="retake_button_description" msgid="4234613030674787714">"पुनःचित्रीकरण करा"</string>
     <string name="review_button_description" msgid="7932122063748430080">"पुनरावलोकन"</string>
-    <string name="share_button_description" msgid="5108508790540832053">"सामायिक करा"</string>
+    <string name="share_button_description" msgid="5108508790540832053">"शेअर करा"</string>
     <string name="view_button_description" msgid="4985768837891362075">"पहा"</string>
     <string name="edit_button_description" msgid="98550816724901925">"संपादित करा"</string>
     <string name="delete_button_description" msgid="2251065309677200911">"हटवा"</string>
@@ -370,7 +370,7 @@
     <string name="settings_cling_text" msgid="5368054627268181292">"सेटिंग्ज मध्ये, रिझॉल्यूशन आणि गुणवत्ता बदला किंवा प्रगत वैशिष्ट्ये वापरून पहा."</string>
     <string name="photo_size_selection_title" msgid="2789753590719172645">"फोटो आकार निवडा"</string>
     <string name="photo_aspect_ratio_selection_content" msgid="6668224437962196229">"आपण हे नंतर सेटिंग्ज मध्ये बदलू शकता."</string>
-    <string name="share_to" msgid="5144911209144798122">"यावर सामायिक करा"</string>
+    <string name="share_to" msgid="5144911209144798122">"यावर शेअर करा"</string>
     <string name="edit_with" msgid="615569327230783971">"सह संपादित करा"</string>
     <string name="startup_dialog_button_next" msgid="1011831256978228993">"पुढील"</string>
     <string name="confirm_button_text" msgid="7389949384482206814">"ठीक आहे, समजले"</string>
