Import translations. DO NOT MERGE
Change-Id: I012a9db0b1460f605b8b82d8476229330e596363
Auto-generated-cl: translation import

--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -303,7 +303,7 @@
     <string name="mode_photosphere_desc" msgid="2403816283825579161">"Cambiar ao modo Fotografía esférica"</string>
     <string name="mode_panorama_desc" msgid="6023020404237519590">"Cambiar ao modo de panorámica"</string>
     <string name="mode_refocus_desc" msgid="6171183297515508465">"Cambiar ao modo Efecto de enfoque"</string>
-    <string name="settings_open_desc" msgid="6914471293841793766">"Abrir a configuración"</string>
+    <string name="settings_open_desc" msgid="6914471293841793766">"Abrir configuración"</string>
     <string name="settings_close_desc" msgid="3095831199632813127">"Pechar a configuración"</string>
     <string name="hdr_plus_off_desc" msgid="5301287296717144319">"HDR Plus desactivado"</string>
     <string name="hdr_plus_on_desc" msgid="8204780034508139909">"HDR Plus activado"</string>
