Import translations. DO NOT MERGE
Auto-generated-cl: translation import

Bug: 64712476
Change-Id: I8dd4db8a188fc16559419de9d87daf74e0b64819

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -134,7 +134,7 @@
     <string name="pref_camera_scenemode_entry_turn_hdr_off" msgid="7694606461440250206">"HDR DESACTIVAT"</string>
     <string name="pref_camera_scenemode_entry_action" msgid="5753183620959062015">"Acció"</string>
     <string name="pref_camera_scenemode_entry_night" msgid="3468037364159759991">"Nit"</string>
-    <string name="pref_camera_scenemode_entry_sunset" msgid="5884302914893488509">"Posta del sol"</string>
+    <string name="pref_camera_scenemode_entry_sunset" msgid="5884302914893488509">"Posta de sol"</string>
     <string name="pref_camera_scenemode_entry_party" msgid="401232668169066415">"Festa"</string>
     <string name="pref_camera_scenemode_label_auto" msgid="2874586883608401615">"CAP"</string>
     <string name="pref_camera_scenemode_label_action" msgid="1822814017595414923">"ACCIÓ"</string>
@@ -180,7 +180,7 @@
     <string name="effect_goofy_face_big_nose" msgid="6936976307035428164">"Nas gran"</string>
     <string name="effect_goofy_face_small_eyes" msgid="558042211252573238">"Ulls petits"</string>
     <string name="effect_backdropper_space" msgid="9133825395915767627">"A l\'espai"</string>
-    <string name="effect_backdropper_sunset" msgid="7354053769863638757">"Posta del sol"</string>
+    <string name="effect_backdropper_sunset" msgid="7354053769863638757">"Posta de sol"</string>
     <string name="effect_backdropper_gallery" msgid="2333888391153564920">"El teu vídeo"</string>
     <string name="video_snapshot_hint" msgid="2707403607250082339">"Toca per fer una foto mentre enregistres un vídeo."</string>
     <string name="video_recording_started" msgid="3374878415050991030">"La gravació de vídeo ha començat."</string>
