--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -345,7 +345,7 @@
     <string name="setting_back_camera_video" msgid="5220819479408164689">"فيديو الكاميرا الخلفية"</string>
     <string name="setting_front_camera_photo" msgid="4131886734622868637">"صورة الكاميرا الأمامية"</string>
     <string name="setting_front_camera_video" msgid="2178799452805359752">"فيديو الكاميرا الأمامية"</string>
-    <string name="setting_default_camera" msgid="6954076799301004779">"الكاميرا الافتراضية"</string>
+    <string name="setting_default_camera" msgid="6954076799301004779">"الكاميرا التلقائية"</string>
     <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"المساعدة والتعليقات"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"جارٍ معالجة النطاق عالي الديناميكية+ …"</string>
     <string name="open_source_licenses" msgid="2169711954264883060">"تراخيص برامج مفتوحة مصدر"</string>
