Import translations. DO NOT MERGE
Auto-generated-cl: translation import

Bug: 64712476
Change-Id: Ia9d7292c5d5313abd8252f43dda61dab33bcea83

--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -111,7 +111,7 @@
     <string name="pref_camera_flashmode_entry_off" msgid="8861322265566617357">"O‘chiq"</string>
     <string name="pref_camera_flashmode_label_auto" msgid="2309144918900450379">"AVTO CHAQNOQ"</string>
     <string name="pref_camera_flashmode_label_on" msgid="373595517770024934">"CHAQNOQ YONIQ"</string>
-    <string name="pref_camera_flashmode_label_off" msgid="7175863901446001441">"CHAQNOQ O‘CHIQ"</string>
+    <string name="pref_camera_flashmode_label_off" msgid="7175863901446001441">"CHAQNOQ YOQILMAGAN"</string>
     <string name="pref_camera_whitebalance_title" msgid="7962809566612868179">"Oq rang muvozanati"</string>
     <string name="pref_camera_whitebalance_label" msgid="7370366644738746700">"OQ RANG MUVOZANATI"</string>
     <string name="pref_camera_whitebalance_entry_auto" msgid="1390631794449502796">"Avto"</string>
@@ -129,9 +129,9 @@
     <string name="pref_camera_scenemode_entry_hdr_plus" msgid="6759085555519758794">"HDR+"</string>
     <string name="pref_camera_scenemode_entry_hdr" msgid="3098836808080630955">"HDR"</string>
     <string name="pref_camera_scenemode_entry_turn_hdr_plus_on" msgid="1096746750342289067">"HDR+ YONIQ"</string>
-    <string name="pref_camera_scenemode_entry_turn_hdr_plus_off" msgid="2668770361856397834">"HDR+ O‘CHIQ"</string>
+    <string name="pref_camera_scenemode_entry_turn_hdr_plus_off" msgid="2668770361856397834">"HDR+ YOQILMAGAN"</string>
     <string name="pref_camera_scenemode_entry_turn_hdr_on" msgid="5232394324298489502">"HDR YONIQ"</string>
-    <string name="pref_camera_scenemode_entry_turn_hdr_off" msgid="7694606461440250206">"HDR O‘CHIQ"</string>
+    <string name="pref_camera_scenemode_entry_turn_hdr_off" msgid="7694606461440250206">"HDR YOQILMAGAN"</string>
     <string name="pref_camera_scenemode_entry_action" msgid="5753183620959062015">"Harakat"</string>
     <string name="pref_camera_scenemode_entry_night" msgid="3468037364159759991">"Tunda"</string>
     <string name="pref_camera_scenemode_entry_sunset" msgid="5884302914893488509">"Quyosh botishi"</string>
@@ -141,7 +141,7 @@
     <string name="pref_camera_scenemode_label_night" msgid="7764371228088101131">"TUN"</string>
     <string name="pref_camera_scenemode_label_sunset" msgid="3443610538453611123">"QUYOSH BOTISHI"</string>
     <string name="pref_camera_scenemode_label_party" msgid="917499272505930322">"BAZM KECHASI"</string>
-    <string name="pref_camera_countdown_label_off" msgid="3986433580620011481">"TAYMER O‘CHIQ"</string>
+    <string name="pref_camera_countdown_label_off" msgid="3986433580620011481">"TAYMER YOQILMAGAN"</string>
     <string name="pref_camera_countdown_label_one" msgid="7647972711796868848">"1 SONIYA"</string>
     <string name="pref_camera_countdown_label_three" msgid="3154170918067103541">"3 SONIYA"</string>
     <string name="pref_camera_countdown_label_ten" msgid="4372650985906500604">"10 SONIYA"</string>
@@ -225,7 +225,7 @@
     <string name="btn_zoom_minus" msgid="5436240345362098272">"Z-"</string>
     <string name="accessibility_zoom_announcement" msgid="6976673411698319811">"Miqyos qiymati – %.1f"</string>
     <string name="capital_on" msgid="1118214824959797269">"YONIQ"</string>
-    <string name="capital_off" msgid="3020696135020167263">"O‘CHIQ"</string>
+    <string name="capital_off" msgid="3020696135020167263">"YOQILMAGAN"</string>
     <string name="video_control_play" msgid="6895236811408921715">"Videoni ijro etish"</string>
     <string name="pref_video_time_lapse_frame_interval_off" msgid="3909611941842585497">"O‘chiq"</string>
     <string name="pref_video_time_lapse_frame_interval_500" msgid="1425296755074319221">"0.5 soniya"</string>
@@ -277,7 +277,7 @@
     <string name="count_down_title_text" msgid="7586031110595513050">"Rasm suratga olish uchun ortga sanalmoqda"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"Suratga olish joyi saqlansinmi?"</string>
     <string name="remember_location_prompt" msgid="3006013504489919474">"Rasm va videolaringizga suratga olish joyi haqidagi ma’lumotni qo‘shing."</string>
-    <string name="remember_location_no" msgid="4412802756840226925">"Yo‘q, kerak emas"</string>
+    <string name="remember_location_no" msgid="4412802756840226925">"Kerak emas"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"Ha"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"QO‘SHIMCHA MOSLAMALAR"</string>
     <string name="camera_menu_settings_label" msgid="3862756725328016822">"Sozlamalar"</string>
