--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -62,11 +62,11 @@
     <string name="flash_on" msgid="6573457197393807642">"تم تشغيل الفلاش"</string>
     <string name="flash_off" msgid="7889323512830926273">"بلا فلاش"</string>
     <string name="unknown" msgid="564184550182858146">"غير معروف"</string>
-    <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"هذا العنصر مخزن محليًا ومتاح في وضع عدم الاتصال."</string>
+    <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"هذا العنصر مخزن محليًا ومتاح بلا إنترنت."</string>
     <string name="please_wait" msgid="1416313324505140068">"يُرجى الانتظار"</string>
     <string name="camera_error_title" msgid="6200558085072670067">"خطأ في الكاميرا"</string>
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"يتعذر الاتصال بالكاميرا."</string>
-    <string name="error_camera_disabled" msgid="5582398275657419692">"تم تعطيل الكاميرا بسبب سياسات الأمان."</string>
+    <string name="error_camera_disabled" msgid="5582398275657419692">"تم إيقاف الكاميرا بسبب سياسات الأمان."</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"حدثت مشكلة أثناء حفظ الصورة أو الفيديو."</string>
     <string name="error_permissions" msgid="3454167403425651254">"لا يحتاج التطبيق إلى أذونات خطيرة لتشغيله، يرجى التحقق من إعدادات الأذونات."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"تعذّر تخزين الصورة."</string>
