--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -348,7 +348,7 @@
     <string name="setting_default_camera" msgid="6954076799301004779">"Kamera Default"</string>
     <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"Bantuan &amp; masukan"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"Memproses HDR+ …"</string>
-    <string name="open_source_licenses" msgid="2169711954264883060">"Lisensi sumber terbuka"</string>
+    <string name="open_source_licenses" msgid="2169711954264883060">"Lisensi open source"</string>
     <string name="pref_category_general" msgid="6737748849700581019">"Setelan Umum"</string>
     <string name="pref_category_resolution_quality" msgid="6641462402321962896">"Resolusi &amp; kualitas"</string>
     <string name="pref_category_about" msgid="1966255405679342337">"Tentang"</string>
