--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -156,7 +156,7 @@
     <string name="pref_camera_hdr_label" msgid="1918040375414771185">"HDR"</string>
     <string name="pref_camera_id_label_back" msgid="1645608049757733858">"FRONT CAMERA"</string>
     <string name="pref_camera_id_label_front" msgid="349308803062874842">"BACK CAMERA"</string>
-    <string name="dialog_ok" msgid="774141340500181131">"ठीक छ"</string>
+    <string name="dialog_ok" msgid="774141340500181131">"ठिक छ"</string>
     <string name="dialog_cancel" msgid="692365061128351656">"रद्द गर्नुहोस्"</string>
     <string name="dialog_report" msgid="7616428760369876209">"रिपोर्ट गर्नुहोस्"</string>
     <string name="dialog_dismiss" msgid="1382550604990470119">"खारेज गर्नुहोस्"</string>
@@ -377,7 +377,7 @@
     <string name="share_to" msgid="5144911209144798122">"साझेदारी गर्नुहोस्"</string>
     <string name="edit_with" msgid="615569327230783971">"संग सम्पादन गर्नुहोस्"</string>
     <string name="startup_dialog_button_next" msgid="1011831256978228993">"NEXT"</string>
-    <string name="confirm_button_text" msgid="7389949384482206814">"ठीक छ, बुझे"</string>
+    <string name="confirm_button_text" msgid="7389949384482206814">"ठिक छ, बुझे"</string>
     <string name="full_sensor_4x3_aspect_ratio" msgid="1270461419743888925">"पूर्ण सेन्सरर \n(४:३)"</string>
     <string name="cropped_sensor_16x9_aspect_ratio" msgid="4742161537633251795">"क्रप गरिएको सेन्सर \n(१६:९)"</string>
     <string name="pref_boolean_false" msgid="461317129020087333">"०"</string>
