Import translations. DO NOT MERGE
Change-Id: I8e0331c0b257a4b00b5df1af518edcae262b8165
Auto-generated-cl: translation import

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -181,7 +181,7 @@
     <string name="effect_goofy_face_small_eyes" msgid="558042211252573238">"عيون صغيرة"</string>
     <string name="effect_backdropper_space" msgid="9133825395915767627">"في الفضاء"</string>
     <string name="effect_backdropper_sunset" msgid="7354053769863638757">"الغروب"</string>
-    <string name="effect_backdropper_gallery" msgid="2333888391153564920">"مقطع فيديو"</string>
+    <string name="effect_backdropper_gallery" msgid="2333888391153564920">"فيديو"</string>
     <string name="video_snapshot_hint" msgid="2707403607250082339">"المس لالتقاط صورة أثناء التسجيل."</string>
     <string name="video_recording_started" msgid="3374878415050991030">"بدأ تسجيل الفيديو."</string>
     <string name="video_recording_stopped" msgid="4658626532857624974">"تم إيقاف تسجيل الفيديو."</string>
@@ -210,7 +210,7 @@
     <string name="accessibility_unlock_to_camera" msgid="1251880974313179442">"إلغاء القفل للانتقال للكاميرا"</string>
     <string name="media_date_content_description" msgid="2155634843596817141">"‏وسائط تم التقاطها في %s"</string>
     <string name="photo_date_content_description" msgid="5705865897898465619">"‏صورة تمّ التقاطها في %s"</string>
-    <string name="video_date_content_description" msgid="2151884014634284456">"‏مقطع فيديو تمّ التقاطه في %s"</string>
+    <string name="video_date_content_description" msgid="2151884014634284456">"‏فيديو تمّ التقاطه في %s"</string>
     <string name="panorama_date_content_description" msgid="990703578639006144">"‏بانوراما تم التقاطها في %s"</string>
     <string name="photosphere_date_content_description" msgid="4183741743409007876">"‏بانوراما Photo Sphere تمّ التقاطها في %s"</string>
     <string name="refocus_date_content_description" msgid="5630960320424345547">"‏صورة بتركيز العدسة تمّ التقاطها في %s"</string>
@@ -276,7 +276,7 @@
     <string name="set_duration" msgid="1638453882581604341">"تعيين المدة بالثواني"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"جارٍ بدء العد التنازلي لالتقاط صورة"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"هل تريد حفظ مواقع الصور؟"</string>
-    <string name="remember_location_prompt" msgid="3006013504489919474">"ضع علامة على الصور ومقاطع الفيديو تشير إلى المواقع التي تم التقاطها فيها."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"ضع علامة على الصور والفيديوهات تشير إلى المواقع التي تم التقاطها فيها."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"لا شكرًا"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"نعم"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"المزيد من الخيارات"</string>
