Import translations. DO NOT MERGE
Change-Id: Ia74ac2ad3286cfe7118529b08c0fccd9a38be4b6
Auto-generated-cl: translation import

--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -319,8 +319,8 @@
     <string name="torch_off_desc" msgid="8304675202998742618">"Լապտերն անջատված է"</string>
     <string name="camera_id_back_desc" msgid="3566327490758890635">"Հետևի տեսախցիկ"</string>
     <string name="camera_id_front_desc" msgid="7497517948130254220">"Առջևի տեսախցիկ"</string>
-    <string name="grid_lines_off_desc" msgid="2022385817190451353">"Ցանցային գծերն անջատված են"</string>
-    <string name="grid_lines_on_desc" msgid="4601540461914364817">"Ցանցային գծերը միացված են"</string>
+    <string name="grid_lines_off_desc" msgid="2022385817190451353">"Ցանցագծերն անջատված են"</string>
+    <string name="grid_lines_on_desc" msgid="4601540461914364817">"Ցանցագծերը միացված են"</string>
     <string name="countdown_timer_off" msgid="1663008439564495948">"Հետհաշվարկի ժամաչափն անջատված է"</string>
     <string name="countdown_timer_duration_3s" msgid="7435393834886072664">"Հետհաշվարկի ժամաչափի տևողությունը սահմանված է 3 վայրկյան"</string>
     <string name="countdown_timer_duration_10s" msgid="9085308782250002795">"Հետհաշվարկի ժամաչափի տևողությունը սահմանված է 10 վայրկյան"</string>
