--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -25,7 +25,7 @@
     <string name="share" msgid="8581089487762243115">"शेअर करा"</string>
     <string name="share_panorama" msgid="3558466186935359444">"पॅनोरामा शेअर करा"</string>
     <string name="share_as_photo" msgid="4831213580709167218">"फोटो म्हणून शेअर करा"</string>
-    <string name="deleted" msgid="2036165115527228127">"हटविला"</string>
+    <string name="deleted" msgid="2036165115527228127">"हटवला"</string>
     <string name="undo" msgid="5110048345890050107">"पूर्ववत करा"</string>
     <string name="details" msgid="4404020741542549488">"तपशील"</string>
     <string name="close" msgid="4826166926297479820">"बंद करा"</string>
@@ -83,7 +83,7 @@
     <string name="pref_camera_id_entry_front" msgid="6233067010315787044">"समोर"</string>
     <string name="pref_camera_save_location_title" msgid="2344235620113384017">"स्थान सेव्ह करा"</string>
     <string name="pref_camera_location_label" msgid="8695441802378057719">"स्थान"</string>
-    <string name="pref_camera_timer_title" msgid="4728838281741571323">"उलटगणती टाइमर"</string>
+    <string name="pref_camera_timer_title" msgid="4728838281741571323">"उलटगणती टायमर"</string>
     <!-- no translation found for pref_camera_timer_sound_default (6225207881203007747) -->
     <skip />
     <string name="pref_camera_timer_sound_title" msgid="9036987234878551217">"उलटगणती दरम्‍यान बीप"</string>
@@ -141,7 +141,7 @@
     <string name="pref_camera_scenemode_label_night" msgid="7764371228088101131">"रात्र"</string>
     <string name="pref_camera_scenemode_label_sunset" msgid="3443610538453611123">"सूर्यास्त"</string>
     <string name="pref_camera_scenemode_label_party" msgid="917499272505930322">"पार्टी"</string>
-    <string name="pref_camera_countdown_label_off" msgid="3986433580620011481">"टाइमर बंद"</string>
+    <string name="pref_camera_countdown_label_off" msgid="3986433580620011481">"टायमर बंद"</string>
     <string name="pref_camera_countdown_label_one" msgid="7647972711796868848">"1 सेकंद"</string>
     <string name="pref_camera_countdown_label_three" msgid="3154170918067103541">"3 सेकंद"</string>
     <string name="pref_camera_countdown_label_ten" msgid="4372650985906500604">"10 सेकंद"</string>
