Import translations. DO NOT MERGE
Auto-generated-cl: translation import

Bug: 64712476
Change-Id: I0b364305a77d21bd6988bef7f0415efc324b7c9f

--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -63,7 +63,7 @@
     <string name="flash_off" msgid="7889323512830926273">"Bez blica"</string>
     <string name="unknown" msgid="564184550182858146">"Nepoznato"</string>
     <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"Ovaj album je pohranjen lokalno i dostupan je van mreže."</string>
-    <string name="please_wait" msgid="1416313324505140068">"Sačekajte"</string>
+    <string name="please_wait" msgid="1416313324505140068">"Pričekajte"</string>
     <string name="camera_error_title" msgid="6200558085072670067">"Greška na kameri"</string>
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"Greška prilikom povezivanja s kamerom."</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"Kamera je onemogućena zbog sigurnosnih pravila."</string>
