Import translations. DO NOT MERGE
Change-Id: Ie46fbe452871baebb14bc2c29f69517f83eb3924
Auto-generated-cl: translation import

--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -360,7 +360,7 @@
     <string name="setting_default_camera" msgid="6954076799301004779">"ডিফল্ট ক্যামেরা"</string>
     <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"সহায়তা এবং প্রতিক্রিয়া"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"HDR+ প্রক্রিয়াকরণ করা হচ্ছে…"</string>
-    <string name="open_source_licenses" msgid="2169711954264883060">"মুক্ত উৎস লাইসেন্স"</string>
+    <string name="open_source_licenses" msgid="2169711954264883060">"ওপেন সোর্স লাইসেন্স"</string>
     <string name="pref_category_general" msgid="6737748849700581019">"সাধারণ সেটিংস"</string>
     <string name="pref_category_resolution_quality" msgid="6641462402321962896">"রেজোলিউশন এবং গুণমান"</string>
     <string name="pref_category_about" msgid="1966255405679342337">"সম্পর্কে"</string>
