--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -62,12 +62,12 @@
     <string name="flash_on" msgid="6573457197393807642">"फ्लॅश टाकला"</string>
     <string name="flash_off" msgid="7889323512830926273">"फ्‍लॅश नाही"</string>
     <string name="unknown" msgid="564184550182858146">"अज्ञात"</string>
-    <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"हा आयटम स्थानिकरित्या संचयित केलेला आहे आणि ऑफलाइन उपलब्ध आहे."</string>
+    <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"हा आयटम स्थानिकरित्या स्टोअर केलेला आहे आणि ऑफलाइन उपलब्ध आहे."</string>
     <string name="please_wait" msgid="1416313324505140068">"कृपया प्रतीक्षा करा"</string>
     <string name="camera_error_title" msgid="6200558085072670067">"कॅमेरा एरर"</string>
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"कॅमेर्‍याशी कनेक्ट करु शकत नाही."</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"सुरक्षा धोरणांमुळे कॅमेरा अक्षम केला गेला आहे."</string>
-    <string name="error_media_storage_failure" msgid="7711687330673245629">"आपला फोटो किंवा व्हिडिओ जतन करण्यात समस्या आली."</string>
+    <string name="error_media_storage_failure" msgid="7711687330673245629">"तुमचा फोटो किंवा व्हिडिओ सेव्ह करण्यात समस्या आली."</string>
     <string name="error_permissions" msgid="3454167403425651254">"अॅपला चालविण्यासाठी आवश्यक गंभीर परवानग्या नाहीत. कृपया आपल्या परवानग्या सेटिंग्ज तपासा."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"फोटो संचयन बिघाड."</string>
     <string name="wait" msgid="765601745709933047">"कृपया प्रतीक्षा करा..."</string>
@@ -76,7 +76,7 @@
     <string name="access_sd_fail" product="default" msgid="2634861611082499811">"SD कार्डमध्‍ये प्रवेश करु शकलो नाही."</string>
     <string name="time_lapse_title" msgid="3267978566401228497">"वेळ समाप्ती रेकॉर्डिंग"</string>
     <string name="feedback_description_camera_access" msgid="419090951070170132">"कॅमेर्‍याशी अ‍ॅप कनेक्ट करणे शक्य झाले नाही"</string>
-    <string name="feedback_description_save_photo" msgid="8658767358989083228">"फोटो किंवा व्हिडिओ डिव्हाइस मध्ये जतन झाला नाही."</string>
+    <string name="feedback_description_save_photo" msgid="8658767358989083228">"फोटो किंवा व्हिडिओ डिव्हाइस मध्ये सेव्ह झाला नाही."</string>
     <string name="capturing" msgid="5255164204641920893">"कॅप्चर करत आहे"</string>
     <string name="pref_camera_id_title" msgid="4680648115225411185">"कॅमेरा निवडा"</string>
     <string name="pref_camera_id_entry_back" msgid="6386943973628160510">"परत"</string>
@@ -164,11 +164,11 @@
     <string name="video_reach_size_limit" msgid="9196836111505731836">"आकार मर्यादा गाठली."</string>
     <string name="pano_too_fast_prompt" msgid="2503148095578052177">"खूप जलद"</string>
     <string name="pano_dialog_prepare_preview" msgid="4445235163599534263">"पॅनोरामा तयार करत आहे"</string>
-    <string name="pano_dialog_panorama_failed" msgid="6772546547048693619">"पॅनोरामा जतन करु शकलो नाही."</string>
+    <string name="pano_dialog_panorama_failed" msgid="6772546547048693619">"पॅनोरामा सेव्ह करु शकलो नाही."</string>
     <string name="pano_dialog_title" msgid="6662642763395425145">"पॅनोरामा"</string>
     <string name="pano_capture_indication" msgid="4002128831255023954">"पॅनोरामा कॅप्‍चर करत आहे"</string>
     <string name="pano_dialog_waiting_previous" msgid="2646847402743245320">"मागील पॅनोरामासाठी प्रतीक्षा करत आहे"</string>
-    <string name="pano_review_saving_indication_str" msgid="4691771283450663293">"जतन करत आहे..."</string>
+    <string name="pano_review_saving_indication_str" msgid="4691771283450663293">"सेव्ह करत आहे..."</string>
     <string name="pano_review_rendering" msgid="2743087719999377155">"पॅनोरामा प्रस्तुत करत आहे"</string>
     <string name="tap_to_focus" msgid="3519718196270593468">"फोकस करण्‍यासाठी स्‍पर्श करा."</string>
     <string name="pref_video_effect_title" msgid="594570613431209010">"प्रभाव"</string>
@@ -181,7 +181,7 @@
     <string name="effect_goofy_face_small_eyes" msgid="558042211252573238">"लहान डोळे"</string>
     <string name="effect_backdropper_space" msgid="9133825395915767627">"अंतराळात"</string>
     <string name="effect_backdropper_sunset" msgid="7354053769863638757">"सूर्यास्त"</string>
-    <string name="effect_backdropper_gallery" msgid="2333888391153564920">"आपला व्हिडिओ"</string>
+    <string name="effect_backdropper_gallery" msgid="2333888391153564920">"तुमचा व्हिडिओ"</string>
     <string name="video_snapshot_hint" msgid="2707403607250082339">"रेकॉर्डिंग करताना फोटो घेण्यासाठी स्पर्श करा."</string>
     <string name="video_recording_started" msgid="3374878415050991030">"व्हिडिओ रेकॉर्डिंग सुरू झाले."</string>
     <string name="video_recording_stopped" msgid="4658626532857624974">"व्हिडिओ रेकॉर्डिंग थांबविले."</string>
@@ -276,13 +276,13 @@
     <string name="set_duration" msgid="1638453882581604341">"कालावधी सेकंदांमध्ये सेट करा"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"फोटो घेण्‍यासाठी उलट गणना करत आहे"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"फोटो स्थान लक्षात ठेवायचे?"</string>
-    <string name="remember_location_prompt" msgid="3006013504489919474">"आपले फोटो आणि व्‍हिडिओ जिथून घेतले त्या स्‍थानांसह ते टॅग करा."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"तुमचे फोटो आणि व्‍हिडिओ जिथून घेतले त्या स्‍थानांसह ते टॅग करा."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"नाही, नको"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"होय"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"अधिक पर्याय"</string>
     <string name="camera_menu_settings_label" msgid="3862756725328016822">"सेटिंग्ज"</string>
     <string name="create_tiny_planet" msgid="5186918191372107343">"लहान ग्रह तयार करा"</string>
-    <string name="saving_tiny_planet" msgid="8828265180177375494">"लहान प्लॅनेट जतन करत आहे …"</string>
+    <string name="saving_tiny_planet" msgid="8828265180177375494">"लहान प्लॅनेट सेव्ह करत आहे …"</string>
     <string name="tiny_planet_zoom" msgid="2985522360577158474">"झूम करा"</string>
     <string name="tiny_planet_rotate" msgid="5445336705705350004">"चक्राकृती फिरवा"</string>
     <string name="photo_editor" msgid="1521994560971367225">"फोटो संपादक"</string>
@@ -378,5 +378,5 @@
     <string name="cropped_sensor_16x9_aspect_ratio" msgid="4742161537633251795">"क्रॉप केलेला सेन्‍सर \n(16:9)"</string>
     <string name="pref_boolean_false" msgid="461317129020087333">"0"</string>
     <string name="pref_boolean_true" msgid="4131945223998878009">"1"</string>
-    <string name="session_saving_image" msgid="8932315404486416826">"जतन करत आहे..."</string>
+    <string name="session_saving_image" msgid="8932315404486416826">"सेव्ह करत आहे..."</string>
 </resources>
