Import translations. DO NOT MERGE
Auto-generated-cl: translation import

Bug: 64712476
Change-Id: I921370cf3e71f04252754f28a0cdf7d5e76a90a4

--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -22,14 +22,14 @@
     <string name="details_hms" msgid="4842276230698703554">"%1$d:%2$02d:%3$02d"</string>
     <string name="set_image" msgid="3969690281401045698">"फ़ोटो को इस रूप में सेट करें"</string>
     <string name="delete" msgid="2714492172818940424">"हटाएं"</string>
-    <string name="share" msgid="8581089487762243115">"साझा करें"</string>
-    <string name="share_panorama" msgid="3558466186935359444">"पैनोरामा को साझा करें"</string>
-    <string name="share_as_photo" msgid="4831213580709167218">"फ़ोटो के रूप में साझा करें"</string>
+    <string name="share" msgid="8581089487762243115">"शेयर करें"</string>
+    <string name="share_panorama" msgid="3558466186935359444">"पैनोरामा को शेयर करें"</string>
+    <string name="share_as_photo" msgid="4831213580709167218">"फ़ोटो के रूप में शेयर करें"</string>
     <string name="deleted" msgid="2036165115527228127">"हटाया गया"</string>
     <string name="undo" msgid="5110048345890050107">"वापस लाएं"</string>
     <string name="details" msgid="4404020741542549488">"विवरण"</string>
     <string name="close" msgid="4826166926297479820">"बंद करें"</string>
-    <string name="show_on_map" msgid="8542853913632649160">"मानचित्र पर दिखाएं"</string>
+    <string name="show_on_map" msgid="8542853913632649160">"मैप पर दिखाएं"</string>
     <string name="rotate_left" msgid="2618440058490662604">"बाएं घुमाएं"</string>
     <string name="rotate_right" msgid="4896096424267838355">"दाएं घुमाएं"</string>
     <string name="edit" msgid="2776879395749004347">"संपादित करें"</string>
@@ -329,7 +329,7 @@
     <string name="done_button_description" msgid="1334963435441544592">"पूर्ण"</string>
     <string name="retake_button_description" msgid="4234613030674787714">"फिर से लें"</string>
     <string name="review_button_description" msgid="7932122063748430080">"समीक्षा करें"</string>
-    <string name="share_button_description" msgid="5108508790540832053">"साझा करें"</string>
+    <string name="share_button_description" msgid="5108508790540832053">"शेयर करें"</string>
     <string name="view_button_description" msgid="4985768837891362075">"देखें"</string>
     <string name="edit_button_description" msgid="98550816724901925">"संपादित करें"</string>
     <string name="delete_button_description" msgid="2251065309677200911">"हटाएं"</string>
@@ -370,7 +370,7 @@
     <string name="settings_cling_text" msgid="5368054627268181292">"सेटिंग में, रिज़ॉल्यूशन और गुणवत्ता बदलें, या अतिरिक्त सुविधाओं को आज़माएं."</string>
     <string name="photo_size_selection_title" msgid="2789753590719172645">"फ़ोटो आकार चुनें"</string>
     <string name="photo_aspect_ratio_selection_content" msgid="6668224437962196229">"आप इसे बाद में सेटिंग में बदल सकते हैं."</string>
-    <string name="share_to" msgid="5144911209144798122">"इनसे साझा करें:"</string>
+    <string name="share_to" msgid="5144911209144798122">"इनसे शेयर करें:"</string>
     <string name="edit_with" msgid="615569327230783971">"इससे संपादित करें:"</string>
     <string name="startup_dialog_button_next" msgid="1011831256978228993">"आगे"</string>
     <string name="confirm_button_text" msgid="7389949384482206814">"ठीक है, समझ लिया"</string>
