Import translations. DO NOT MERGE
Change-Id: Ib966a60ba52770103f34103f3291e13d4e209339
Auto-generated-cl: translation import

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -62,11 +62,11 @@
     <string name="flash_on" msgid="6573457197393807642">"تم تشغيل الفلاش"</string>
     <string name="flash_off" msgid="7889323512830926273">"بلا فلاش"</string>
     <string name="unknown" msgid="564184550182858146">"غير معروف"</string>
-    <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"هذا العنصر مخزن محليًا ومتاح في وضع عدم الاتصال."</string>
+    <string name="try_to_set_local_album_available_offline" msgid="3363125545009254117">"هذا العنصر مخزن محليًا ومتاح بلا إنترنت."</string>
     <string name="please_wait" msgid="1416313324505140068">"يُرجى الانتظار"</string>
     <string name="camera_error_title" msgid="6200558085072670067">"خطأ في الكاميرا"</string>
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"يتعذر الاتصال بالكاميرا."</string>
-    <string name="error_camera_disabled" msgid="5582398275657419692">"تم تعطيل الكاميرا بسبب سياسات الأمان."</string>
+    <string name="error_camera_disabled" msgid="5582398275657419692">"تم إيقاف الكاميرا بسبب سياسات الأمان."</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"حدثت مشكلة أثناء حفظ الصورة أو الفيديو."</string>
     <string name="error_permissions" msgid="3454167403425651254">"لا يحتاج التطبيق إلى أذونات خطيرة لتشغيله، يرجى التحقق من إعدادات الأذونات."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"تعذّر تخزين الصورة."</string>
@@ -181,7 +181,7 @@
     <string name="effect_goofy_face_small_eyes" msgid="558042211252573238">"عيون صغيرة"</string>
     <string name="effect_backdropper_space" msgid="9133825395915767627">"في الفضاء"</string>
     <string name="effect_backdropper_sunset" msgid="7354053769863638757">"الغروب"</string>
-    <string name="effect_backdropper_gallery" msgid="2333888391153564920">"مقطع فيديو"</string>
+    <string name="effect_backdropper_gallery" msgid="2333888391153564920">"فيديو"</string>
     <string name="video_snapshot_hint" msgid="2707403607250082339">"المس لالتقاط صورة أثناء التسجيل."</string>
     <string name="video_recording_started" msgid="3374878415050991030">"بدأ تسجيل الفيديو."</string>
     <string name="video_recording_stopped" msgid="4658626532857624974">"تم إيقاف تسجيل الفيديو."</string>
@@ -210,7 +210,7 @@
     <string name="accessibility_unlock_to_camera" msgid="1251880974313179442">"إلغاء القفل للانتقال للكاميرا"</string>
     <string name="media_date_content_description" msgid="2155634843596817141">"‏وسائط تم التقاطها في %s"</string>
     <string name="photo_date_content_description" msgid="5705865897898465619">"‏صورة تمّ التقاطها في %s"</string>
-    <string name="video_date_content_description" msgid="2151884014634284456">"‏مقطع فيديو تمّ التقاطه في %s"</string>
+    <string name="video_date_content_description" msgid="2151884014634284456">"‏فيديو تمّ التقاطه في %s"</string>
     <string name="panorama_date_content_description" msgid="990703578639006144">"‏بانوراما تم التقاطها في %s"</string>
     <string name="photosphere_date_content_description" msgid="4183741743409007876">"‏بانوراما Photo Sphere تمّ التقاطها في %s"</string>
     <string name="refocus_date_content_description" msgid="5630960320424345547">"‏صورة بتركيز العدسة تمّ التقاطها في %s"</string>
@@ -276,7 +276,7 @@
     <string name="set_duration" msgid="1638453882581604341">"تعيين المدة بالثواني"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"جارٍ بدء العد التنازلي لالتقاط صورة"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"هل تريد حفظ مواقع الصور؟"</string>
-    <string name="remember_location_prompt" msgid="3006013504489919474">"ضع علامة على الصور ومقاطع الفيديو تشير إلى المواقع التي تم التقاطها فيها."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"ضع علامة على الصور والفيديوهات تشير إلى المواقع التي تم التقاطها فيها."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"لا شكرًا"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"نعم"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"المزيد من الخيارات"</string>
@@ -345,7 +345,7 @@
     <string name="setting_back_camera_video" msgid="5220819479408164689">"فيديو الكاميرا الخلفية"</string>
     <string name="setting_front_camera_photo" msgid="4131886734622868637">"صورة الكاميرا الأمامية"</string>
     <string name="setting_front_camera_video" msgid="2178799452805359752">"فيديو الكاميرا الأمامية"</string>
-    <string name="setting_default_camera" msgid="6954076799301004779">"الكاميرا الافتراضية"</string>
+    <string name="setting_default_camera" msgid="6954076799301004779">"الكاميرا التلقائية"</string>
     <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"المساعدة والتعليقات"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"جارٍ معالجة النطاق عالي الديناميكية+ …"</string>
     <string name="open_source_licenses" msgid="2169711954264883060">"تراخيص برامج مفتوحة مصدر"</string>
