--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -303,7 +303,7 @@
     <string name="mode_photosphere_desc" msgid="2403816283825579161">"Cambiar ao modo Fotografía esférica"</string>
     <string name="mode_panorama_desc" msgid="6023020404237519590">"Cambiar ao modo de panorámica"</string>
     <string name="mode_refocus_desc" msgid="6171183297515508465">"Cambiar ao modo Efecto de enfoque"</string>
-    <string name="settings_open_desc" msgid="6914471293841793766">"Abrir a configuración"</string>
+    <string name="settings_open_desc" msgid="6914471293841793766">"Abrir configuración"</string>
     <string name="settings_close_desc" msgid="3095831199632813127">"Pechar a configuración"</string>
     <string name="hdr_plus_off_desc" msgid="5301287296717144319">"HDR Plus desactivado"</string>
     <string name="hdr_plus_on_desc" msgid="8204780034508139909">"HDR Plus activado"</string>
@@ -357,9 +357,9 @@
     <string name="pref_video_quality_entry_high" msgid="1613578418842803393">"Alta"</string>
     <string name="pref_video_quality_entry_qcif" msgid="1717816794399266216">"QCIF"</string>
     <string name="pref_video_quality_entry_cif" msgid="645414019445016434">"CIF"</string>
-    <string name="pref_video_quality_entry_480p" msgid="5880250731066854583">"SD 480 p"</string>
-    <string name="pref_video_quality_entry_720p" msgid="4076146428148167262">"HD 720 p"</string>
-    <string name="pref_video_quality_entry_1080p" msgid="4539958891524211120">"HD 1080 p"</string>
+    <string name="pref_video_quality_entry_480p" msgid="5880250731066854583">"SD 480p"</string>
+    <string name="pref_video_quality_entry_720p" msgid="4076146428148167262">"HD 720p"</string>
+    <string name="pref_video_quality_entry_1080p" msgid="4539958891524211120">"HD 1080p"</string>
     <string name="pref_video_quality_entry_qvga" msgid="342600517453781430">"QVGA"</string>
     <string name="pref_video_quality_entry_2160p" msgid="4522927631413184505">"UHD de 4K"</string>
     <string name="setting_summary_x_megapixels" msgid="6533463462760866830">"%1$s megapíxeles"</string>
