Import translations. DO NOT MERGE
Change-Id: I8693fa1ccaa83c92e02e5fdacbd53b031c14657e
Auto-generated-cl: translation import

--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -270,7 +270,7 @@
     <string name="time_lapse_seconds" msgid="7319683099532506270">"Broj sekundi:"</string>
     <string name="time_lapse_minutes" msgid="5325447383033224679">"Broj minuta:"</string>
     <string name="time_lapse_hours" msgid="5294001144133261436">"Broj sati:"</string>
-    <string name="time_lapse_interval_set" msgid="2418594453248958440">"Završeno"</string>
+    <string name="time_lapse_interval_set" msgid="2418594453248958440">"Gotovo"</string>
     <string name="set_time_interval" msgid="2531393962847535331">"Postaviti vremenski interval"</string>
     <string name="set_time_interval_help" msgid="64145154088021389">"Funkcija protoka vremena je isključena. Uključite je kako biste postavili vremenski interval."</string>
     <string name="set_duration" msgid="1638453882581604341">"Postaviti tajmer u sekundama"</string>
