Import translations. DO NOT MERGE
Change-Id: I089f60f258be8d29f01af5ab07e96e43189c3b7c
Auto-generated-cl: translation import

--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -212,7 +212,7 @@
     <string name="photo_date_content_description" msgid="5705865897898465619">"%s 拍攝的相片"</string>
     <string name="video_date_content_description" msgid="2151884014634284456">"%s 拍攝的影片"</string>
     <string name="panorama_date_content_description" msgid="990703578639006144">"%s 拍攝的全景相片"</string>
-    <string name="photosphere_date_content_description" msgid="4183741743409007876">"%s 拍攝的 Photo Sphere 全景相片"</string>
+    <string name="photosphere_date_content_description" msgid="4183741743409007876">"%s 拍攝的 全景相片"</string>
     <string name="refocus_date_content_description" msgid="5630960320424345547">"%s 拍攝的鏡頭模糊相片"</string>
     <string name="media_processing_content_description" msgid="8138587719107183754">"正在處理的媒體項目"</string>
     <string name="accessibility_mode_list_toggle" msgid="4784230103566918645">"切換模式清單"</string>
