--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -58,7 +58,7 @@
     <string name="iso" msgid="8578773821062054902">"ISO"</string>
     <string name="unit_mm" msgid="5210344300697638286">"मिमी"</string>
     <string name="manual" msgid="2444400953521760140">"विवरण पुस्तिका"</string>
-    <string name="auto" msgid="2552649885114400474">"स्वतः"</string>
+    <string name="auto" msgid="2552649885114400474">"अपने आप"</string>
     <string name="flash_on" msgid="6573457197393807642">"फ़्लैश चलाया गया"</string>
     <string name="flash_off" msgid="7889323512830926273">"कोई फ़्लैश नहीं"</string>
     <string name="unknown" msgid="564184550182858146">"अज्ञात"</string>
@@ -98,7 +98,7 @@
     <string name="pref_camera_picturesize_entry_medium" msgid="7708839551627003154">"मध्यम"</string>
     <string name="pref_camera_picturesize_entry_small" msgid="2991239656622539068">"छोटा"</string>
     <string name="pref_camera_focusmode_title" msgid="3637702747984180030">"फ़ोकस मोड"</string>
-    <string name="pref_camera_focusmode_entry_auto" msgid="8977409813328199501">"स्वतः"</string>
+    <string name="pref_camera_focusmode_entry_auto" msgid="8977409813328199501">"अपने आप"</string>
     <string name="pref_camera_focusmode_entry_infinity" msgid="3887667853236656322">"अनंत"</string>
     <string name="pref_camera_focusmode_entry_macro" msgid="7632276686726851426">"मैक्रो"</string>
     <string name="pref_camera_focusmode_label_auto" msgid="4884418453600317694">"स्वत:"</string>
@@ -106,7 +106,7 @@
     <string name="pref_camera_focusmode_label_macro" msgid="5065639298027996399">"मैक्रो"</string>
     <string name="pref_camera_flashmode_title" msgid="8363803841022314574">"फ़्लैश मोड"</string>
     <string name="pref_camera_flashmode_label" msgid="5852483713534762800">"फ़्लैश मोड"</string>
-    <string name="pref_camera_flashmode_entry_auto" msgid="4211992591841657014">"स्वतः"</string>
+    <string name="pref_camera_flashmode_entry_auto" msgid="4211992591841657014">"अपने आप"</string>
     <string name="pref_camera_flashmode_entry_on" msgid="3519831202665377698">"चालू"</string>
     <string name="pref_camera_flashmode_entry_off" msgid="8861322265566617357">"बंद"</string>
     <string name="pref_camera_flashmode_label_auto" msgid="2309144918900450379">"फ़्लैश अपनेआप:"</string>
@@ -114,7 +114,7 @@
     <string name="pref_camera_flashmode_label_off" msgid="7175863901446001441">"फ़्लैश बंद"</string>
     <string name="pref_camera_whitebalance_title" msgid="7962809566612868179">"श्वेत संतुलन"</string>
     <string name="pref_camera_whitebalance_label" msgid="7370366644738746700">"श्वेत संतुलन"</string>
-    <string name="pref_camera_whitebalance_entry_auto" msgid="1390631794449502796">"स्वतः"</string>
+    <string name="pref_camera_whitebalance_entry_auto" msgid="1390631794449502796">"अपने आप"</string>
     <string name="pref_camera_whitebalance_entry_incandescent" msgid="1140391575294372706">"अत्यधिक चमकीला"</string>
     <string name="pref_camera_whitebalance_entry_daylight" msgid="757833578153467254">"दिन का प्रकाश"</string>
     <string name="pref_camera_whitebalance_entry_fluorescent" msgid="5157027611220790970">"फ़्लोरेसेंट"</string>
@@ -125,7 +125,7 @@
     <string name="pref_camera_whitebalance_label_fluorescent" msgid="10552295745391742">"फ़्लोरेसेंट"</string>
     <string name="pref_camera_whitebalance_label_cloudy" msgid="4880793739075193336">"धुंधला"</string>
     <string name="pref_camera_scenemode_title" msgid="5709932164781367066">"दृश्य मोड"</string>
-    <string name="pref_camera_scenemode_entry_auto" msgid="9205644316260850379">"स्वतः"</string>
+    <string name="pref_camera_scenemode_entry_auto" msgid="9205644316260850379">"अपने आप"</string>
     <string name="pref_camera_scenemode_entry_hdr_plus" msgid="6759085555519758794">"HDR+"</string>
     <string name="pref_camera_scenemode_entry_hdr" msgid="3098836808080630955">"HDR"</string>
     <string name="pref_camera_scenemode_entry_turn_hdr_plus_on" msgid="1096746750342289067">"HDR+ चालू"</string>
