--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -87,7 +87,7 @@
     <!-- no translation found for pref_camera_timer_sound_default (6225207881203007747) -->
     <skip />
     <string name="pref_camera_timer_sound_title" msgid="9036987234878551217">"Bip conto alla rov."</string>
-    <string name="setting_off" msgid="6782191065550276632">"OFF"</string>
+    <string name="setting_off" msgid="6782191065550276632">"Off"</string>
     <string name="setting_on" msgid="9086728135773197891">"ON"</string>
     <string name="pref_video_quality_title" msgid="5887153490982738588">"Qualità video"</string>
     <string name="pref_video_time_lapse_frame_interval_title" msgid="4975260837607993569">"Time-lapse"</string>
